--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -9,3 +9,12 @@ img{
   // 禁止拖动图像
   -webkit-user-drag: none;
 }
+#components-layout-demo-side .logo {
+  height: 32px;
+  margin: 16px;
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.site-layout .site-layout-background {
+  background: #fff;
+}
